# carbon-intensity

./: Cargo.toml  README.md
Android/: build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/stuartharris/carbon/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/stuartharris/carbon/: MainActivity.kt  http.kt  location.kt
Android/app/src/main/java/com/stuartharris/carbon/chart/: IntensityChart.kt  LineChart.kt  MixChart.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/stuartharris/carbon/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Android/shared/: build.gradle
Android/shared/src/androidTest/java/com/stuartharris/carbon/shared/: ExampleInstrumentedTest.kt
Android/shared/src/main/java/com/example/counter/shared_types/: Coordinate.java  Effect.java  Event.java  GenerationMixPoint.java  IntensityPoint.java  LocationRequest.java  (+5 more)
iOS/: project.yml
iOS/CarbonIntensity/: CarbonIntensityApp.swift  CarbonIntensityView.swift  Info.plist  location.swift
iOS/CarbonIntensity.xcodeproj/: project.pbxproj
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/: project.pbxproj
shared/src/: app.rs  lib.rs  view_model.rs
shared/src/capabilities/: location.rs  mod.rs
shared/src/fixtures/: national_intensity.json  national_mix.json  postcode.json  regional.json
shared/src/model/: factors.rs  global.rs  intensity.rs  location.rs  mod.rs  national.rs  national_mix.rs  postcode.rs  regional.rs
shared_types/: build.rs
web-nextjs/: next.config.js  package.json  pnpm-lock.yaml
web-nextjs/pages/: index.tsx  locationRequest.ts
web-remix/: package.json  pnpm-lock.yaml  remix.config.js
web-remix/app/capabilities/: locationRequest.ts
web-remix/app/routes/: _index.tsx
(+23 files in other folders)
