[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core = "0.6"
crux_http = "0.4"
crux_macros = "0.3"
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = "0.24.1"
wasm-bindgen = "0.2.87"
chrono = { version = "0.4.26", features = ["serde"] }
url = "2.4.0"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.24.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.1", features = ["build"] }
