[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
crux_core = "0.6"
crux_http = "0.4"
crux_macros = "0.3"
lazy_static = "1.4.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.100"
uniffi = "0.24.1"
url = "2.4.0"
wasm-bindgen = "0.2.87"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.24.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.1", features = ["build"] }

[dev-dependencies]
assert_let_bind = "0.1.1"
assert_matches = "1.5.0"
insta = { version = "1.30.0", features = ["yaml"] }
